Fix jumping on hover.

--- a/mein-beitrag.css
+++ b/mein-beitrag.css
@@ -3,7 +3,7 @@
 }
 
 .goal-item {
-    margin: 0.3em;
+    margin: 0.5em;
 }
 
 .goal-item:hover {
